--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                   Demonstration of the developed Bin-picking System.
                 </h2>
                 <iframe width="650" height="340"
-                 src="https://www.youtube.com/embed/8bcPk6gX0Rg?autoplay=1&loop=1&playlist=8bcPk6gX0Rg">
+                 src="https://drive.google.com/file/d/12ec16M583TaLuBa7hfe0d6LwZ-rZgGPp/view">
                  </iframe> 
            </div>
         </div>
@@ -474,7 +474,7 @@
                 </a>
               </li> -->
               <li class="list-inline-item">
-                <a href="https://www.facebook.com/joana.mota.9279">
+                <a href="https://www.facebook.com/avinashsen707">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -482,7 +482,7 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="https://github.com/JoanaMota/Bin-picking">
+                <a href="https://github.com/avinashsen707">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-github fa-stack-1x fa-inverse"></i>
@@ -490,7 +490,7 @@
                 </a>
               </li>
             </ul>
-            <p class="copyright text-muted">Copyright &copy; avinashsen707.github.io 2020</p>
+            <p class="copyright text-muted">Copyright 2020 &copy; avinashsen707.github.io</p>
           </div>
         </div>
       </div>
