--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                   Demonstration of the developed Bin-picking System.
                 </h2>
                 <iframe width="650" height="340"
-                 src="https://www.youtube.com/embed/7gsZfrnAFLY">
+                 src="https://www.youtube.com/embed/7gsZfrnAFLY?autoplay=1&loop=1&playlist=7gsZfrnAFLY">
                  </iframe> 
            </div>
         </div>
