--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <p>My name is Avinash Sen and I am a Manufacturing Systems Management (Mechanical Engineering) Student at the Government Engineering College Thrissur, in Kerala, India.</p>
           <p>The purpose of this blog is to, not only, document the progress of my Master Project, but also help me to organize my work and my tasks for this work.</p>
-          <p>This project was held in the <a href="http://www.gectcr.ac.in/">Nodal Centre for Robotics and Artificial Intelligence (NCRAI)</a> at the Mechanical Engineering Department.</p>
+          <p>This project was held in the <a href="http://www.gectcr.ac.in">Nodal Centre for Robotics and Artificial Intelligence (NCRAI)</a> at the Mechanical Engineering Department.</p>
         </div>
       </div>
     </div>
