--- a/post_8_10.html
+++ b/post_8_10.html
@@ -90,7 +90,7 @@
                 <p><b>First data acquisition from the Realsense D435.</b></p>
                 <p>In order to use the Intel Realsense D435, I firstly needed to install Realsense Viewer and Realsense driver by following <a href="https://github.com/IntelRealSense/librealsense/releases">these steps</a>. 
                   Afterwards I was able to run Realsense on ROS and visualise it's data in Rviz and Realsense viewer.</p>
-                <p>Since I needed to process the data without being always connected to the Realsense I recorded it into a <a href="http://wiki.ros.org/rosbag">rosbag</a>. In the next picture we can see a Depth Map.</p>
+                <p>Since I needed to process the data without being always connected to the Realsense I recorded it into a <a href="http://wiki.ros.org/rosbag">rosbag</a>.</p>
                 <p><img class="img-fluid" src="img/depthmap.png" alt=""></p>
               <!-- Pager -->
               <div class="clearfix">
