--- a/post_8_10.html
+++ b/post_8_10.html
@@ -76,6 +76,11 @@
               <p>On October 10 we had our first NCRAI Meeting, in which every member of the <a href="http://gectcr.ac.in/">NCRAI</a> 
                 had to present their project subject and expected tasks for this semester.</p>
               <p>Therefore part of this week was dedicated for the preparation of my presentation.</p>
+              <p>
+                <iframe width="640" height="360"
+                src="https://www.youtube.com/embed/jjVr07oTqDk?autoplay=1&loop=1&playlist=jjVr07oTqDk">
+                </iframe>
+              </p> 
                 
               <p><b>State of the art.</b></p>
               <p>In order to write my project's state of the art and study what has already been done to solve the problems of bin-picking, I first started to read the <a href="https://scholar.google.com/scholar?as_ylo=2016&q=bin+picking+system&hl=en&as_sdt=0,5">Google Scholar</a>  Papers and thesis in this subject.
