--- a/post_8_10.html
+++ b/post_8_10.html
@@ -78,7 +78,7 @@
               <p>Therefore part of this week was dedicated for the preparation of my presentation.</p>
               <p>
                 <iframe width="640" height="360"
-                src="https://www.youtube.com/embed/jjVr07oTqDk?autoplay=1&loop=1&playlist=jjVr07oTqDk">
+                src="https://www.youtube.com/embed/s66sSj6h3OE?autoplay=1&loop=1&playlist=s66sSj6h3OE">
                 </iframe>
               </p> 
                 
