--- a/post_2_4.html
+++ b/post_2_4.html
@@ -59,7 +59,7 @@
               <h1>Week 2-4</h1>
               <h2 class="subheading">ROS Installation and Tutorials</h2>
               <span class="meta">Posted by
-                <a href="#">Avinash Sen</a>
+                <a href="about.html">Avinash Sen</a>
                 on April 03, 2020</span>
             </div>
           </div>
