--- a/post_11_13.html
+++ b/post_11_13.html
@@ -97,7 +97,7 @@
                 <li>Alpha beta filter</li>
               </ul>
 
-              <p>Moreover, I started a C++ course to learn in which ways this programing language differs in comparison with C.</p>
+              <p>Moreover, I started a C++ course to learn in which ways this programing language differs in comparison with Python.</p>
 
 
               <!-- Pager -->
