--- a/post_14_16.html
+++ b/post_14_16.html
@@ -75,20 +75,16 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
-            <font size="6"><b>Intrinsic Caliberation of Realseense D435</b></font>
-            <p>In this past two weeks I calibrated the intrinsic parameters of the Realsense and created a launch file that runs all the necessary programs to process and visualize the RGB and Depth Data acquired
+            <font size="6"><b>Intrinsic Caliberation of Realsense D435</b></font>
+            <p>In this past two weeks I calibrated the intrinsic parameters of the Realsense and created a launch file that runs all the necessary programs to process and visualize the RGB_D Data acquired
               by the Realsense. This launch file already includes the respective .yaml files to calibrate the rgb and the depth of the sensor.
             </p>
             <p><img class="img-fluid" src="img/int_calib.png" alt=""></p>
 
-            <font size="6"><b>Processing the RGB_D Data</b></font>
-            <p>Using the recorded rosbag I continued to process the RGB_Ddata based on the featurepoints trained by SIFT and FLANN matcher. After that i draw a 2D bounding box around the object trained by feature points by finding the corner pixel values of feature points. Then i was able to determine the centroid of a simple box and its normal. 
-              To do so I started by calculating all the normals of the entire surface and determine the center of it.
-            </p>
+            <font size="6"><b>Processing the Data to find Centroid and Normal</b></font>
+            <p>Using the recorded rosbag I continued to process the RGB_D data based on the feature points trained by SIFT and FLANN matcher. After that i draw a 2D bounding box around the object trained by finding the corner pixel values of feature points. Then, i was able to determine the centroid of a simple box and its normal.</p>
             <p><img src="img/centroid.png" alt="" width="100%" height="100%"/></p>
-            <p> Afterwards it was necessary to define which of the points of the RGB_D data was closer to the center of the surface and determine its corresponding normal. The visualization of the 
-              centroid and its normal is shown below.
-            </p>
+            <p>To do so I started by calculating all the normals of the entire surface and determine the center of it. Afterwards it was necessary to define which of the points of the RGB_D data was closer to the center of the surface and determine its corresponding normal. The visualization of the centroid and its normal is shown below.</p>
             <p><img src="img/normal.png" alt="" width="100%" height="100%"/></p>
 
             <!-- Pager -->
