--- a/post_14_16.html
+++ b/post_14_16.html
@@ -81,7 +81,7 @@
             </p>
             <p><img class="img-fluid" src="img/int_calib.png" alt=""></p>
 
-            <font size="6"><b>Processing the Data to find Centroid and Normal</b></font>
+            <font size="6"><b>Processing the RGB_D Data</b></font>
             <p>Using the recorded rosbag I continued to process the RGB_D data based on the feature points trained by SIFT and FLANN matcher. After that i draw a 2D bounding box around the object trained by finding the corner pixel values of feature points. Then, i was able to determine the centroid of a simple box and its normal.</p>
             <p><img src="img/centroid.png" alt="" width="100%" height="100%"/></p>
             <p>To do so I started by calculating all the normals of the entire surface and determine the center of it. Afterwards it was necessary to define which of the points of the RGB_D data was closer to the center of the surface and determine its corresponding normal. The visualization of the centroid and its normal is shown below.</p>
