--- a/post_11_13.html
+++ b/post_11_13.html
@@ -83,7 +83,7 @@
               <p>In order to decide the correct position to install the Realsense, I tried some frames for the different possible positions of the camera sensor on the robot, and then finalised the position for the camera sensor to be attached.</p>
 
               <p><b>Final Position Installed - </b>Realsense with 6 Degrees of freedom.</p>
-              <p><img class="img-fluid" src="img/install.png" alt=""></p>
+              <p><img class="img-fluid" src="img/install.jpg" alt=""></p>
 
               <p>Afterwards I began to segment the sensor data, for the detection of a simple object, a box. Then  
                created a launch file to run all the necessary programs for the visualization of the results. 
