--- a/post_19_21.html
+++ b/post_19_21.html
@@ -53,7 +53,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/week_19_21.png')">
+    <header class="masthead" style="background-image: url('img/week_19_21.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
