--- a/post_19_21.html
+++ b/post_19_21.html
@@ -62,7 +62,7 @@
               <h1>Week 19-21 </h1>
               <h2 class="subheading">Support for the Realsense. Installation of the Aubo-i5's Moveit! Package and coordinate Transformation.</h2>
               <span class="meta">Posted by
-                <a href="about.html">Joana Mota</a>
+                <a href="about.html">Avinash Sen</a>
                 on April 09, 2020</span>
             </div>
           </div>
