--- a/post_19_21.html
+++ b/post_19_21.html
@@ -132,7 +132,7 @@
             <div style="background: #f0f0f0; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%">roslaunch binpicking_system globalvisualization.launch</pre></div>
             
             <center>
-              <p><img src="img/robot_rviz.jpg" ></p>
+              <p><img src="img/robot_rviz.jpg" alt="" width="100%" height="100%"/></p>
             </center>
               
             <p>Given the fact that it is necessary to move the robot to positions with accuracy in oder to 
