--- a/post_8_10.html
+++ b/post_8_10.html
@@ -72,7 +72,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
-              <p><b>Presentation.</b></p>
+              <p><font size="6"><b>Presentation</b></font></p>
               <p>On October 10 we had our first NCRAI Meeting, in which every member of the <a href="http://gectcr.ac.in/">NCRAI</a> 
                 had to present their project subject and expected tasks for this semester.</p>
               <p>Therefore part of this week was dedicated for the preparation of my presentation.</p>
@@ -82,7 +82,7 @@
                 </iframe>
               </p> 
                 
-              <p><b>State of the art.</b></p>
+              <p><font size="6"><b>State of the art</b></font></p>
               <p>In order to write my project's state of the art and study what has already been done to solve the problems of bin-picking, I first started to read the <a href="https://scholar.google.com/scholar?as_ylo=2016&q=bin+picking+system&hl=en&as_sdt=0,5">Google Scholar</a>  Papers and thesis in this subject.
                 Initially, I focused mainly in Papers that use the point cloud data obtained from a Depth Camera. 
                 <p>Various vision- and range ﬁnder-based bin picking frameworks have been developed and described in the literature. Early methods, used a 3D range scanner for object localization. This system uses geometric features, such as edges and discontinuities, found in the scans of the parts, to generate the hypothesis about the pose of the part. A visual bin picking system with a stereo camera was introduced in a paper. Here, visual cues are used to recognize the pose of complex objects. Visual features, such as circles, are utilized for recognizing the position and orientation of the object. This approach has a disadvantage that it is necessary to deﬁne these visual clues and their 3D geometric representation. </p>
@@ -92,7 +92,7 @@
                 <p><img class="img-fluid" src="img/feature.png" alt=""></p>
                 <p><img class="img-fluid" src="img/multilight.png" alt=""></p>
                 
-                <p><b>First data acquisition from the Realsense D435.</b></p>
+                <p><font size="6"><b>First Data acquisition</b></font></p>
                 <p>In order to use the Intel Realsense D435, I firstly needed to install Realsense Viewer and Realsense driver by following <a href="https://github.com/IntelRealSense/librealsense/releases">these steps</a>. 
                   Afterwards I was able to run Realsense on ROS and visualise it's data in Rviz and Realsense viewer.</p>
                 <p>Since I needed to process the data without being always connected to the Realsense I recorded it into a <a href="http://wiki.ros.org/rosbag">rosbag</a>.</p>
