--- a/post_17_18.html
+++ b/post_17_18.html
@@ -79,9 +79,11 @@
                 After the Presentation, The Review panel gave suggestions for my prject and asked to look into Machine learning frameworks for my object detection and pose estimation.
               </p>
               <p>
-                <iframe width="640" height="360"
-                src="https://www.youtube.com/embed/7tN30m5h8tU?autoplay=1&loop=1&playlist=7tN30m5h8tU">
-                </iframe>
+                <center>
+                  <iframe width="640" height="360"
+                   src="https://www.youtube.com/embed/7tN30m5h8tU?autoplay=1&loop=1&playlist=7tN30m5h8tU">
+                  </iframe>
+                </center>                
               </p> 
                 
               <p><font size="6"><b>Continuation of state of the art</b></font></p>
