--- a/post_8_10.html
+++ b/post_8_10.html
@@ -77,9 +77,11 @@
                 had to present their project subject and expected tasks for this semester.</p>
               <p>Therefore part of this week was dedicated for the preparation of my presentation.</p>
               <p>
-                <iframe width="640" height="360"
-                src="https://www.youtube.com/embed/s66sSj6h3OE?autoplay=1&loop=1&playlist=s66sSj6h3OE">
-                </iframe>
+                <center>
+                  <iframe width="640" height="360"
+                   src="https://www.youtube.com/embed/s66sSj6h3OE?autoplay=1&loop=1&playlist=s66sSj6h3OE">
+                  </iframe>
+                </center>                
               </p> 
                 
               <p><font size="6"><b>State of the art</b></font></p>
