--- a/post_8_10.html
+++ b/post_8_10.html
@@ -98,7 +98,10 @@
                 <p>In order to use the Intel Realsense D435, I firstly needed to install Realsense Viewer and Realsense driver by following <a href="https://github.com/IntelRealSense/librealsense/releases">these steps</a>. 
                   Afterwards I was able to run Realsense on ROS and visualise it's data in Rviz and Realsense viewer.</p>
                 <p>Since I needed to process the data without being always connected to the Realsense I recorded it into a <a href="http://wiki.ros.org/rosbag">rosbag</a>.</p>
-                <p><img class="img-fluid" src="img/depthmap.png" alt=""></p>
+                <center>
+                  <p><img class="img-fluid" src="img/depthmap.png" alt=""></p>
+                </center>
+                
               <!-- Pager -->
               <div class="clearfix">
                 <a class="btn btn-primary float-left" href="post_5_7.html">&larr;Previous Week </a>
