--- a/post_22_24.html
+++ b/post_22_24.html
@@ -53,7 +53,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/week_22_24.jpg')">
+    <header class="masthead" style="background-image: url('img/week_22_24.png')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
@@ -169,10 +169,18 @@
               </p>
             </center>
 
+            <p>The obtained caliberation results are as follows:</p>
+            <center>
+              <p>
+                <img src="img/refer1.jpeg" alt="" width="45%" height="45%"/>
+                <img src="img/refer2.jpeg" alt="" width="45%" height="45%"/>
+              </p>
+             </center>
+
             <!-- Pager -->
             <div class="clearfix">
               <a class="btn btn-primary float-left" href="post_19_21.html">&larr;Previous Week </a>
-              <a class="btn btn-primary float-right" href="post_25_27.html">Next Week &rarr;</a>
+              <a class="btn btn-primary float-right" href="post_25_26.html">Next Week &rarr;</a>
             </div>
           </div>
         </div>
