--- a/post_25_26.html
+++ b/post_25_26.html
@@ -50,7 +50,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/week_25_26.jpg')">
+    <header class="masthead" style="background-image: url('img/week_25_26.png')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
@@ -80,7 +80,7 @@
               </p>
               <p>
                 <center>
-                  <p><img class="img-fluid" src="img/dope_sample.png" alt=""></p>
+                  <p><img class="img-fluid" src="img/dope_example.png" alt=""></p>
                 </center> 
               </p>
               <p>
