--- a/post_25_26.html
+++ b/post_25_26.html
@@ -60,7 +60,7 @@
               <h2 class="subheading">Continuation of State of the art. DOPE (Deep Object Pose Estimation) code implementing in ROS Enviornment.</h2>
               <span class="meta">Posted by
                 <a href="about.html">Avinash Sen</a>
-                on April 11, 2018</span>
+                on April 11, 2020</span>
             </div>
           </div>
         </div>
@@ -73,7 +73,7 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
               <p><font size="6"><b>Continuation of state of the art</b></font></p>
-              <p>On the last weeks, i learned abot the domain randomization, in which the training data is randomized in non-realistic ways so that,
+              <p>On the last weeks, i learned about the domain randomization, in which the training data is randomized in non-realistic ways so that,
                 at test time, real data appears to the net- work as simply another variation. Regarding this in a paper, i explored a powerful complement to domain randomization (DR) namely, using photorealistic data.
                 They show that a simple combination of DR data with such photorealistic data yields sufﬁcient variation and complexity to train a deep neural network that is then able to operate on real data without any ﬁne-tuning.
                 Additionally, their synthetically trained network generalizes well to a variety of real-world scenarios, including various backgrounds and extreme lighting conditions.
@@ -95,8 +95,8 @@
                   An integrated robotic system that shows the estimated poses are of sufﬁcient accuracy to solve real-world tasks such as pick-and-place, object handoff, and path following.
                 </li>
               </p>
-              <p>Now the authors of this paper produced this pose estimation algorithm which is called DOPE which stands for Deep object Pose Estimation.
-                This is a state of art pose estimation and we decided to use this mainly for our research. So that we can focus on eliminating other problems not just about the concept of pose estimation and its mathematics.
+              <p>The authors of this paper produced this pose estimation algorithm, which is called DOPE which stands for Deep object Pose Estimation.
+                This is a state of art pose estimation and i decided to use this mainly for my research. So that i can focus on eliminating other problems not just about the concept of pose estimation and its mathematics.
               </p>
               <p>
                 <center>
@@ -110,7 +110,7 @@
               <p>They propose a two-step solution to address the problem of detecting and estimating the 6-DoF pose of all instances of a set of known household objects from a single RGB image first,
                 a deep neural network estimates belief maps of 2D keypoints of all the objects in the image coordinate system. Secondly, peaks from these belief maps are fed to a standard perspective-n-point (PnP) algorithm to estimate the 6-DoF pose of each object instance
               </p>
-              <p>This <a href="https://github.com/NVlabs/Deep_Object_Pose"></a> is the official DOPE ROS package for detection and 6-DoF pose estimation of known objects from an RGB camera.
+              <p>This <a href="https://github.com/NVlabs/Deep_Object_Pose">https://github.com/NVlabs/Deep_Object_Pose</a> is the official DOPE ROS package for detection and 6-DoF pose estimation of known objects from an RGB camera.
                 The network has been trained default on the following YCB objects: cracker box, sugar box, tomato soup can, mustard bottle, potted meat can, and gelatin box.
               </p>
                            
