--- a/post_22_24.html
+++ b/post_22_24.html
@@ -53,7 +53,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/week_22_24.png')">
+    <header class="masthead" style="background-image: url('img/week_22_24.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
