--- a/post_27_29.html
+++ b/post_27_29.html
@@ -75,11 +75,14 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
-            <font size="6"><b>DOPE code Training and Testing</b></font>
+            <font size="6"><b>DOPE code Training and Testing for Demo object</b></font>
             <p>
               This network was implemented using PyTorch v0.4. The VGG-19 feature extractions were taken from publicly available trained weights in torchvision open models.
-              The networks were trained for 60 epochs with a batchsize of 16. Adam was used as the optimizer with learning rate set at 0.0001.
+              The networks were trained for 60 epochs with a batchsize of 16 for this Demo object. Adam was used as the optimizer with learning rate set at 0.0001.
               The system was trained on an Dell Precision 7820 workstation (containing NVIDIA P4000 16GB GPU), and testing used same.
+            </p>
+            <p>For more, Download the Dataset from <a href="https://research.nvidia.com/publication/2018-06_Falling-Things">https://research.nvidia.com/publication/2018-06_Falling-Things</a> and
+              train the objects by <a href="https://github.com/NVlabs/Deep_Object_Pose/blob/master/scripts/train.py">https://github.com/NVlabs/Deep_Object_Pose/blob/master/scripts/train.py</a> to get respective weights.
             </p>
             <center>
               <p><img class="img-fluid" src="img/training.jpg" alt=""></p>
