--- a/post_31_32.html
+++ b/post_31_32.html
@@ -85,7 +85,7 @@
                 <p><b>Paper Draft Copy:</b></p>
                 <center>                  
                   <iframe width="500" height="700"
-                   src="https://www.youtube.com/embed/cS64Wbs5HS8?autoplay=1&loop=1&playlist=cS64Wbs5HS8">
+                   src="https://github.com/avinashsen707/avinashsen707.github.io/blob/master/img/MACE_Avinash_Sen_GEC_Thrissur.pdf">
                   </iframe>
                 </center>                
               </p> 
