--- a/post_31_32.html
+++ b/post_31_32.html
@@ -92,7 +92,7 @@
                 </div>
               </center>                          
               
-              <p>The paper is then chcked with turnit! application and verified pligarism.</p>  
+              <p>The paper is then checked with turnit! application and verified plagiarism.</p>  
               
               <!-- Pager -->
               <div class="clearfix">
