--- a/post_33_34.html
+++ b/post_33_34.html
@@ -88,8 +88,11 @@
               
               <p><b>Github Repository Preview:</b></p>
               <center>
-                <iframe src="https://github.com/avinashsen707/2D-Object-Pose-Estimation---Realsense-D435" name="2D Object Detection and Pose Estimation"></iframe>
-                <p><a href="https://github.com/avinashsen707/2D-Object-Pose-Estimation---Realsense-D435" target="2D Object Detection and Pose Estimation">Open Github.com</a></p>
+                <div class="thumbnail-container">
+                  <div class="thumbnail">
+                   <iframe src="https://github.com/avinashsen707/2D-Object-Pose-Estimation---Realsense-D435/" frameborder="0"></iframe>
+                  </div>
+                </div
               </center>                          
               
               <p>The paper is then checked with turnit! application and verified plagiarism.</p>  
