--- a/post_33_34.html
+++ b/post_33_34.html
@@ -87,7 +87,7 @@
               </p>
               
               <p>
-                <b>Github Repository : 2D-Object-Pose-Estimation---Realsense-D435</b>
+                <b>Github Repository : 2D-Object-Pose-Estimation---Realsense-D435 : </b>
                 Object 3DoF Pose Estimation trained by RGB Data - Using Intel® RealSense D435
               </p>
               <center>
@@ -96,7 +96,7 @@
               </center>                          
               
               <p>
-                <b>Github Repository : AUBOi5-D435-ROS-DOPE</b>
+                <b>Github Repository : AUBOi5-D435-ROS-DOPE : </b>
                 Object 3DoF Pose Estimation trained by RGB Data - Using Intel® RealSense D435
               </p>
               <center>
