--- a/post_33_34.html
+++ b/post_33_34.html
@@ -104,7 +104,7 @@
                 <p><a href="https://github.com/avinashsen707/AUBOi5-D435-ROS-DOPE">Open in Github.com</a></p>
               </center>
 
-              <p>The further part of the project is in progressing stage and will be published github later.</p>  
+              <p>The further part of the project is in progressing stage and will be published in github later.</p>  
               
               <!-- Pager -->
               <div class="clearfix">
