--- a/post_35_39.html
+++ b/post_35_39.html
@@ -88,9 +88,9 @@
               <p>
                 There are three types of GitHub Pages sites: project, user, and organization. Project sites are connected to a specific project
                 hosted on GitHub, such as a JavaScript library or a recipe collection. User and organization sites are connected to a specific GitHub account.
-                To publish a user site, you must create a repository owned by your user account that's named <user>.github.io.
-                To publish an organization site, you must create a repository owned by an organization that's named <organization>.github.io. 
-                Unless you're using a custom domain, user and organization sites are available at http(s)://<username>.github.io or http(s)://<organization>.github.io.
+                To publish a user site, you must create a repository owned by your user account that's named user.github.io.
+                To publish an organization site, you must create a repository owned by an organization that's named organization.github.io. 
+                Unless you're using a custom domain, user and organization sites are available at http(s)://username.github.io or http(s)://organization.github.io.
               </p>
               
               <p>
