--- a/post_39_41.html
+++ b/post_39_41.html
@@ -78,23 +78,42 @@
               </p>
                             
               <p>
-                <b>Deep Learning : Specialisation </b>
+                <b><font size="5">Deep Learning : Specialisation</font></b>
                 Deep Learning is transforming multiple industries. This five-course specialization will help you understand Deep Learning fundamentals,
                 apply them, and build a career in AI.
               </p>
               <center>
                 <p><img class="img-fluid" src="img/deepspec.png" alt=""></p>
                 <p><a href="https://www.deeplearning.ai/deep-learning-specialization/">Open in deeplearning.ai</a></p>
+              </center> 
+              <p><b><font size="3">1. Neural Networks and Deep Learning :</b></font>
+                In this course, i  learned the foundations of deep learning. When i finished this class, I: -
+                Understood the major technology trends driving Deep Learning - Be able to build, train and apply fully connected deep neural networks -
+                Knew how to implement efficient (vectorized) neural networks - Understood the key parameters in a neural network's architecture
+                This course also teaches me how Deep Learning actually works, rather than presenting only a cursory or surface-level description.
+                So after completing it, i am able to apply deep learning to a my own applications. This is the first course of the Deep Learning Specialization.
+              </p>
+              <center>
+                <p><img class="img-fluid" src="img/cdl1.png" alt=""></p>
+                <p><a href="https://www.coursera.org/learn/neural-networks-deep-learning?specialization=deep-learning">Open in deeplearning.ai</a></p>
               </center>                          
               
               <p>
-                <b>TensorFlow in Practice</b>
+                <b><font size="5">TensorFlow in Practice</font></b>
                 If you are a software developer who wants to build scalable AI-powered algorithms, you need to understand how to use the tools to build them.
                 This Specialization will teach you best practices for using TensorFlow, a popular open-source framework for machine learning.
               </p>
               <center>
                 <p><img class="img-fluid" src="img/tfpractice.png" alt=""></p>
                 <p><a href="https://www.deeplearning.ai/tensorflow-in-practice/">Open in deeplearning.ai</a></p>
+              </center>
+              <p><b><font size="3">1. Introduction to TensorFlow for Artificial Intelligence, Machine Learning, and Deep Learning :</b></font>
+                This new deeplearning.ai TensorFlow Specialization taught me how to use TensorFlow to implement those principles so that i can start building
+                and applying scalable models to real-world problems.
+              </p>
+              <center>
+                <p><img class="img-fluid" src="img/ctf1.png" alt=""></p>
+                <p><a href="https://www.coursera.org/learn/introduction-tensorflow">Open in deeplearning.ai</a></p>
               </center>
 
               <p>The further parts of the courses are in progressing stage and will be published in blog later.</p>  
