--- a/post_39_41.html
+++ b/post_39_41.html
@@ -72,13 +72,13 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
-              <p><font size="6"><b><a href="https://www.deeplearning.ai/deep-learning-specialization/">deeplearning.ai</a></b></font></p>
+              <p><font size="7"><b><a href="https://www.deeplearning.ai/deep-learning-specialization/">deeplearning.ai</a></b></font></p>
               <p>
                 Whether you want to build algorithms or build a company, deeplearning.ai’s courses will teach you key concepts and applications of AI.
               </p>
                             
               <p>
-                <b><font size="5">Deep Learning : Specialisation</font></b>
+                <p><b><font size="6">I. Deep Learning : Specialisation</font></b></p>
                 Deep Learning is transforming multiple industries. This five-course specialization will help you understand Deep Learning fundamentals,
                 apply them, and build a career in AI.
               </p>
@@ -86,7 +86,8 @@
                 <p><img class="img-fluid" src="img/deepspec.png" alt=""></p>
                 <p><a href="https://www.deeplearning.ai/deep-learning-specialization/">Open in deeplearning.ai</a></p>
               </center> 
-              <p><b><font size="3">1. Neural Networks and Deep Learning :</b></font>
+              <p>
+                <p><b><font size="5">1. Neural Networks and Deep Learning :</b></font></p>
                 In this course, i  learned the foundations of deep learning. When i finished this class, I: -
                 Understood the major technology trends driving Deep Learning - Be able to build, train and apply fully connected deep neural networks -
                 Knew how to implement efficient (vectorized) neural networks - Understood the key parameters in a neural network's architecture
@@ -99,7 +100,7 @@
               </center>                          
               
               <p>
-                <b><font size="5">TensorFlow in Practice</font></b>
+                <p><b><font size="6">II. TensorFlow in Practice</font></b></p>
                 If you are a software developer who wants to build scalable AI-powered algorithms, you need to understand how to use the tools to build them.
                 This Specialization will teach you best practices for using TensorFlow, a popular open-source framework for machine learning.
               </p>
@@ -107,7 +108,8 @@
                 <p><img class="img-fluid" src="img/tfpractice.png" alt=""></p>
                 <p><a href="https://www.deeplearning.ai/tensorflow-in-practice/">Open in deeplearning.ai</a></p>
               </center>
-              <p><b><font size="3">1. Introduction to TensorFlow for Artificial Intelligence, Machine Learning, and Deep Learning :</b></font>
+              <p>
+                <p><b><font size="5">1. Introduction to TensorFlow for Artificial Intelligence, Machine Learning, and Deep Learning :</b></font></p>
                 This new deeplearning.ai TensorFlow Specialization taught me how to use TensorFlow to implement those principles so that i can start building
                 and applying scalable models to real-world problems.
               </p>
