--- a/about.html
+++ b/about.html
@@ -67,9 +67,25 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <p>My name is Avinash Sen and I am a Manufacturing Systems Management (Mechanical Engineering) Student at the Government Engineering College Thrissur, in Kerala, India.</p>
-          <p>The purpose of this blog is to, not only, document the progress of my Master Project, but also help me to organize my work and my tasks for this work.</p>
-          <p>This project was held in the <a href="http://www.gectcr.ac.in">Nodal Centre for Robotics and Artificial Intelligence (NCRAI)</a> at the Mechanical Engineering Department.</p>
+          <p>
+            My name is Avinash Sen and I am a Manufacturing Systems Management (Mechanical Engineering) final semester Student at the Government Engineering College Thrissur, in Kerala, India.
+            I did my B.Tech in  Mechatronics Engineering and I am an Experienced Maintenance Engineer with a demonstrated history of working with Automation systems.
+          </p>
+          <p>The purpose of this blog is not only to document the progress of my Master Project, but also to organize my work and tasks for this project.</p>
+          <p>This project was held in the <a href="http://www.gectcr.ac.in">Nodal Centre for Robotics and Artificial Intelligence (NCRAI)</a> at the Government Engineering College Thrissur.</p>
+          <p>
+            I am seeking a job that would synergize my skills and knowledge with the objectives of the organization. If you give me a chance,  being a dedicated and focused individual who is passionate about learning, I will definitely be a vital asset to your organisation.
+            To describe myself in a nutshell, I am systematic, organized and hardworking; ready to take up any challenge of life abreast with the latest trends and a team player with excellent communication skills. My basic objective is to hone in my skills for comprehensive personality development and be an epitome of trust and reliability in the corporate world. My prime goal is to understand professional environment and capitalize on opportunities.
+            Please see the attached resume :
+          </p>
+          <p><b>Resume:</b></p>
+              <center>
+                <div class="graph-outline">
+                  <object style="width:100%;" data="img/cv_avinashsen.pdf?#zoom=85&scrollbar=0&toolbar=0&navpanes=0" type="application/pdf">
+                  <embed src="img/cv_avinashsen.pdf?#zoom=85&scrollbar=0&toolbar=0&navpanes=0" type="application/pdf" />
+                  </object>
+                </div>
+              </center>
         </div>
       </div>
     </div>
