--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-            <h2 class="section-heading">Development and Testing of a Deep Learning based Bin Picking System</h2>
+            <h2 class="section-heading">Development and Testing of a Deep Learning based Bin Picking System using ROS</h2>
           <p>The technique used by a robot to detect the objects and estimating their poses to grab, which are randomly placed inside a box or a pallet is called bin picking.</p>
           <p>My purpose with this project is to develop a system that is based on learning the appearance model of objects using convolutional neural networks (CNN) is proposed.</p>
-          <p>Using PyTorch deeplearning framework, a 6DoF Poses of objects in the bin is estimated and it has experimented with the usability of depth sensing cameras in operation room lighting. Creation of the 3D object models is done using Blender tool, which is for Generating synthetic training dataset with the help of Unreal Engine(UE4) and NVidia Deep Learning Data Synthesizer(NDDS) software. We can find the object poses with adequate accuracy using deep-learning the model for physical world semantic grasping in a disordered bin by actual robot.</p>
+          <p>Using PyTorch deeplearning framework, a 6DoF Poses of objects in the bin is estimated and it has experimented with the usability of depth sensing cameras in operation room lighting. Creation of the 3D object models is done using Blender tool, which is for Generating synthetic training dataset with the help of Unreal Engine(UE4) and NVidia Deep Learning Data Synthesizer(NDDS) software. By Deep Learning the created  model, the object poses with adequate accuracy for physical world semantic grasping in a disordered bin by actual robot is obtained and the system is implemented in ROS framework.</p>
         </div>
       </div>
     </div>
