--- a/post_17_18.html
+++ b/post_17_18.html
@@ -73,7 +73,7 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
               <p><font size="6"><b>Presentation</b></font></p>
-              <p>On November 20th, we had our Second NCRAI Meeting, in which every member of the <a href="http://gectcr.ac.in/">NCRAI</a> 
+              <p>On November 20th, we had our Second Presentation Meeting, in which every member of the <a href="http://gectcr.ac.in/">NCRAI</a> 
                 had to present their project status and remaining tasks for this semester.</p>
               <p>Therefore part of this week was dedicated for the preparation of my presentation.
                 After the Presentation, The Review panel gave suggestions for my prject and asked to look into Machine learning frameworks for my object detection and pose estimation.
