--- a/post_8_10.html
+++ b/post_8_10.html
@@ -73,7 +73,7 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
               <p><font size="6"><b>Presentation</b></font></p>
-              <p>On October 10 we had our first NCRAI Meeting, in which every member of the <a href="http://gectcr.ac.in/">NCRAI</a> 
+              <p>On October 10 we had our first Presentation Meeting, in which every member of the <a href="http://gectcr.ac.in/">NCRAI</a> 
                 had to present their project subject and expected tasks for this semester.</p>
               <p>Therefore part of this week was dedicated for the preparation of my presentation.</p>
               <p>
