--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                 <ul>
                   <li>Creation of Custom objects using the Blendor tool.</li>
                   <li>Creation of Custom dataset using Nvidia Deep learning Data Synthesizer (NDDS) software in Unreal Engine (UE4) and Training in GPU.</li>
-                  <li>Implementation in ROS.</li>                  
+                  <li>Implementation and Testing in ROS.</li>                  
                 </ul>
               </h3>
             </a>
