--- a/post_46_48.html
+++ b/post_46_48.html
@@ -109,7 +109,7 @@
               </center>
             </p>
             <p>
-              <b>STEP 3 - Train the Created Custom model: Training code is also provided - <a href="https://github.com/avinashsen707/AUBOi5-D435-ROS-DOPE/blob/master/dope/scripts/train.py"> train.py</a>
+              STEP 3 - Train the Created Custom model: Training code is also provided - <a href="https://github.com/avinashsen707/AUBOi5-D435-ROS-DOPE/blob/master/dope/scripts/train.py"> train.py</a>
             </p>
 
             <font size="6"><b>Implementation and Testing in ROS.</b></font>
