--- a/post_46_48.html
+++ b/post_46_48.html
@@ -163,8 +163,8 @@
 
             <!-- Pager -->
             <div class="clearfix">
-              <a class="btn btn-primary float-left" href="post_25_26.html">&larr;Previous Week </a>
-              <a class="btn btn-primary float-right" href="post_30.html">Next Week &rarr;</a>
+              <a class="btn btn-primary float-left" href="post_39_45.html">&larr;Previous Week </a>
+              <a class="btn btn-primary float-right" href="post_49_50.html">Next Week &rarr;</a>
             </div>            
           
           </div>
