--- a/post_46_48.html
+++ b/post_46_48.html
@@ -53,7 +53,7 @@
     </nav>
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/week_27_29.jpg')">
+    <header class="masthead" style="background-image: url('img/week_46_48.png')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
